removes supress warning preview (at last)